# iot-protocol

./: CMakeLists.txt  FILE_STRUCTURE_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  IP_HEADER_IMPLEMENTATION_SUMMARY.md  IP_HEADER_INTEGRATION.c  IP_HEADER_PROTOCOL.md  IP_HEADER_QUICK_REFERENCE.md  TAGOTIP_COMPARISON.md  prj.conf
Inc/: IP_connect.h  communication.h  ip_header.h  message_format.h  socket.h
boards/: rpi_pico_rp2040_w.overlay
src/: ip_header.c  ip_header.h  ip_header_examples.c  main.c
src/protocol/: IP_connect.c  communication.c  ip_header.c  message_format.c  socket.c
